feat : local di 처리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,10 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.3"
 
+    //lottie
     implementation "com.airbnb.android:lottie:5.2.0"
+
+    //data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
 }
