--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.3"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.3"
+    //data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
 }
