--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,6 @@ dependencies {
     //lottie
     implementation "com.airbnb.android:lottie:5.2.0"
 
-    //data store
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    //Balloon
+    implementation "com.github.skydoves:balloon:1.4.7"
 }
