feat: 화면별 크기 세팅

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,7 @@ dependencies {
 
     //oss
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    implementation 'androidx.activity:activity-ktx:1.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
 }
