--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.Haru_question"
 
-        android:theme="@style/Theme.AppCompat.Starting"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
