--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.colddelight.haru_question"
         minSdk 26
         targetSdk 32
-        versionCode 1
+        versionCode 2
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -101,4 +101,8 @@ dependencies {
 
     //splash
     implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    def  billing_version  = "5.0.0"
+    implementation("com.android.billingclient:billing:$billing_version")
+    implementation("com.android.billingclient:billing-ktx:$billing_version")
 }
