--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.colddelight.haru_question">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.android.vending.BILLING" />
+
     <application
         android:name=".HaruQuestionApp"
         android:allowBackup="true"
@@ -13,7 +15,6 @@
         android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Haru_question"
-
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
